// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositPhoneField renders correctly after flag button press 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🇩🇪
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +49
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="30 12345678"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly after input change 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🇩🇪
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +49
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="30 12345678"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly with default props 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🇺🇸
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +1
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="(555) 123-4567"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly with different region 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🇩🇪
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +49
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="30 12345678"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly with error message 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🇺🇸
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +1
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="(555) 123-4567"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value=""
      />
    </View>
  </View>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#ca3542",
        "fontFamily": "Geist Regular",
        "fontSize": 12,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginTop": 4,
      }
    }
  >
    Invalid phone number
  </Text>
</View>
`;

exports[`DepositPhoneField renders correctly with long phone number 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🏳️
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +1
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="(555) 123-4567"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value="55512345678901234"
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly with onSubmitEditing callback 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🇩🇪
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +49
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[MockFunction]}
        placeholder="30 12345678"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly with special characters in phone number 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🏳️
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +1
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="(555) 123-4567"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value="5551234567"
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly with unsupported region 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🏳️
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +1
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="(555) 123-4567"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`DepositPhoneField renders correctly with value 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Phone Number
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          🇺🇸
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#b7bbc8",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 4,
            }
          }
        >
          +1
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoComplete="tel"
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="(555) 123-4567"
        placeholderTextColor="#b7bbc8"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
            "paddingVertical": 0,
          }
        }
        testID="deposit-phone-field-test-id"
        textContentType="telephoneNumber"
        value="5551234567"
      />
    </View>
  </View>
</View>
`;
